# hybrid-sanctions-search-engine

./: .dockerignore  .gitignore  .pre-commit-config.yaml  ACCEPTANCE_GATES_ISSUES_REPORT.md  ACCEPTANCE_GATES_STATUS_REPORT.md  AC_VECTOR_SEARCH_REPORT.md  AGENTS.md  API_EXAMPLES.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_OVERVIEW_FOR_MANAGEMENT.md  ARCH_MAP.md  ASCII_FASTPATH_FINAL_SUMMARY.md  ASCII_FASTPATH_GOLDEN_INTEGRATION_REPORT.md  ASCII_FASTPATH_IMPLEMENTATION_REPORT.md  BASIC_ERRORS_FIXED_REPORT.md  BLOCK_C_ACCEPTANCE_REPORT.md  CACHING_IMPLEMENTATION_REPORT.md  CANARY_IMPLEMENTATION_REPORT.md  CHANGELOG.md  CI_CD_GATES_IMPLEMENTATION_REPORT.md  CLAUDE.md  CODE_QUALITY_REVIEW.md  CODE_QUALITY_REVIEW_REPORT.md  CONSOLIDATION_SUMMARY.md  CONTEXT_FILTERING_SUMMARY.md  CONTRACTS_AND_TESTS_IMPLEMENTATION_REPORT.md  CRITICAL_SECURITY_ISSUES.md  DEPENDENCIES_AND_LAZY_IMPORTS_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_FINAL.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  DEPLOYMENT_RESTART_INSTRUCTIONS.md  DEPLOYMENT_SUMMARY.md  DEPLOY_COMMANDS.md  DEPLOY_FOR_TEAMLEAD.md  DEPRECATED_FILES_BACKUP.md  DETAILED_ERRORS_BY_MODULE.md  DOCKER_DEPLOYMENT_INSTRUCTIONS.md  (+533 more)
.artifacts/: dependency_analysis.md  dependency_cleanup_summary.md  failure_groups.json  failures_parsed.json  layer_entries.json  pytest_summary_failures.json
.claude/: CLAUDE.md
.github/: ci-thresholds.yml
.reviews/: ARCHITECTURE_REVIEW.md  CI_CD_AUDIT.md  DEAD_CODE_REPORT.md  EXECUTIVE_SUMMARY.md  FEATURE_FLAGS_AUDIT.md  MIGRATION_PLAN.md  REDUNDANT_FILES.csv  SECURITY_AUDIT.md  TEST_AUDIT.md
artifacts/: ACCEPTANCE_GATES_STATUS.md  GOLDEN_TESTS_REPORT.md  SEARCHTRACE_ACCEPTANCE_REPORT.md  profile_report.md  profile_stats.prof
cli/: test_e2e.py
config/: embedding_preprocessor_config.json  pattern_rules.json  settings.py  settings.yaml  weights.json
data/: diminutives_ru.json  diminutives_ru.json.backup  diminutives_uk.json
docs/: API.md  ARCHITECTURE.md  ARCHITECTURE_OVERVIEW.md  ARCHITECTURE_OVERVIEW_codex.md  CONFIGURATION.md  DATA_CLEANUP_ANALYSIS.md  DATA_DUPLICATION_ANALYSIS.md  DATA_PIPELINE.md  DATA_STRUCTURE_PROPOSAL.md  DEAD_CODE_ANALYSIS.md  DEPLOYMENT.md  ELASTICSEARCH_WATCHLIST_ADAPTER.md  FEATURE_FLAGS.md  HYBRID_SEARCH_REFACTORING_ANALYSIS.md  MORPHOLOGY_ADAPTER.md  NORMALIZATION_TOKENIZER.md  PRODUCTION_CONFIGURATION.md  PRODUCTION_DEPLOYMENT.md  PROFILING_README.md  PROJECT_CLEANUP_REPORT.md  QA_PARITY.md  README.md  README_RUNBOOK.md  SANCTIONS_UPDATE_WORKFLOW.md  SEARCH_API.md  SEARCH_CONFIGURATION.md  SEARCH_DEPLOYMENT_PIPELINE.md  SEARCH_INTEGRATION_PLAN.md  SEARCH_INTEGRATION_README.md  SEARCH_TROUBLESHOOTING.md  embeddings.md  hybrid-search-runbook.md  search-system-stability.md  sprint-3-quality-monitoring-complete.md
examples/: elasticsearch_watchlist_adapter_example.py  prometheus_integration_example.py  search_integration_example.py
httpx/: __init__.py
k8s/: ai-service.yaml  configmap.yaml  elasticsearch.yaml  ingress.yaml  monitoring.yaml  namespace.yaml
monitoring/: README.md  alertmanager.yml  docker-compose.monitoring.yml  grafana-datasources.yml  grafana_dashboard.json  prometheus.yml  prometheus_alerts.yml  requirements.txt
reports/: collect.txt  e2e.txt  executive_summary.md  fix_plan.md  full_after_p1.txt  full_after_p1_working.txt  full_run.txt  integration.txt  junit.xml  normalization_comparison.json  r2_full.txt  r2_hotfix_focus.txt  r2_summary.md  r3_full.txt  regression_delta.md  regression_delta_r3.md  root_cause_analysis.md  test_failures_report.md  test_failures_summary.md  unit.txt
scripts/: CLEANUP_SUMMARY.md  README.md  README_SANCTIONS_PIPELINE.md  README_ac_search.md  README_bulk_loader.md  README_elasticsearch_setup.md  (+73 more)
(+700 files in other folders)
