[tool.poetry]
name = "ai-service"
version = "0.1.0"
description = "AI Service for normalization and generation of spelling variants for search in sanction data"
authors = ["Daria Pavlova"]
readme = "README.md"
packages = [
    { include = "ai_service", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"
fastapi = "^0.116.1"
uvicorn = {extras = ["standard"], version = "^0.35.0"}
pydantic = "^2.11.7"
pydantic-settings = "^2.10.1"
spacy = "^3.8.7"
nltk = "^3.9.1"
pyahocorasick = "^2.2.0"
rapidfuzz = "^3.13.0"
langdetect = "^1.0.9"
unidecode = "^1.4.0"
python-levenshtein = "^0.27.1"
sentence-transformers = "^5.1.0"
pymorphy3 = "^2.0.4"
transliterate = "^1.10.2"
requests = "^2.31.0"
pymorphy3-dicts-uk = "^2.4.1.1.1663094765"
pyyaml = "^6.0.2"

[tool.poetry.scripts]
post-install = "src.ai_service.scripts.post_install:main"

[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.0.0"
httpx = "^0.27.0"
pytest-timeout = "^2.4.0"
pre-commit = "^4.3.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
